# Steam-Analytics-Dashboard

./: .gitignore  README.md  config.env  pyproject.toml
Algorithms/: units_regression.R
Scrapers/: Achievements_scraper.py  appdetails_scraper.py  appreviews_scraper.py  currentplayers_scraper.py  game_list.py  tags_scraper.py
Transformers/: blank.txt  master.py  pairwise.py  revenue.py
