[project]
name = "Steam-Analytics-Dashboard"
version = "1.0.0"
dependencies = [
    "pandas >= 3.0.1",
    "pydantic >= 2.12.5",
    "python-dotenv >= 1.2.1",
    "requests >= 2.32.5",
]
requires-python = ">=3.14"
authors = [
    {name = "Andrew Beyer"},
    {name = "Chinmay Patel"},
    {name = "Lauren Willig"},
    {name = "Aldila Yunus"},
    {name = "Marwan Al Shoubaki"}
]

[project.urls]
Respository = ""
