[project]
name = "Steam-Analytics-Dashboard"
version = "1.0.0"
readme = "README.md"
dependencies = [
    "pandas >= 3.0.1",
    "pydantic >= 2.12.5",
    "python-dotenv >= 1.2.1",
    "requests >= 2.32.5",
    "beautifulsoup4 >= 4.14.3"
]
requires-python = ">=3.14"
authors = [
    {name = "Andrew Beyer"},
    {name = "Chinmay Patel"},
    {name = "Lauren Willig"},
    {name = "Aldila Yunus"},
    {name = "Marwan Al Shoubaki"}
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
Respository = "https://github.com/abeyer19/Steam-Analytics-Dashboard.git"
